# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

project ("OS_HW")

# Include sub-projects.
add_subdirectory ("HW03_01")
add_subdirectory ("HW03_02")
add_subdirectory ("HW03_03")
add_subdirectory ("HW03_04")
add_subdirectory ("HW04")
